syntax = "proto3";

package tttt;

message Color {
  uint32 red = 1;
  uint32 blue = 2;
  uint32 green = 3;
}

message Point {
  uint32 x = 1;
  uint32 y = 2;
}

message ColorPoint {
  Color color = 1;
  Point point = 2;
  float tolerance = 3;
  string name = 4;
  optional float tolerance2 = 5;
  repeated ColorPoint children = 6;
  map<string, ColorPoint> info = 7;
}


service RouteTest {
  rpc CheckColorPoint(ColorPoint) returns (ColorPoint);
  rpc CheckPoint(Point) returns (Point);
  rpc CheckPointStream(Point) returns (stream Point);
}
